--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
+    "lucide-svelte": "^0.542.0",
+    "lucide-vue-next": "^0.542.0",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
