--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "lucide-svelte": "^0.542.0",
     "lucide-vue-next": "^0.542.0",
     "vue": "^3.5.18",
